samples/_failures_safe/1761247343_b79a11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bc70a8f.c: In function ‘main’:
./samples/SAFE/__tmp_2bc70a8f.c:147:9: error: expected expression at end of input
  147 |         if (len > 0 && line[len -
      |         ^~
./samples/SAFE/__tmp_2bc70a8f.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2bc70a8f.c:147:9: error: expected declaration or statement at end of input
